[project]
name = "baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "akshare>=1.18.28",
    "baostock>=0.8.9",
    "docker>=7.1.0",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.8",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-tsinghua", marker = "sys_platform == 'linux'" },
    { index = "pytorch-tsinghua", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-tsinghua", marker = "sys_platform == 'win32'" },
]